gccida/c0/std_expand_builtin_va_arg
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3457:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3459:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3461:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3462:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3465:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // [rsp+18h] [rbp-78h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3466:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+28h] [rbp-68h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3467:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // [rsp+30h] [rbp-60h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3469:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rounded_size; // [rsp+50h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3487:29: error: expected expression
rounded_size = ( tree_node *)*( &global_trees + 15); 
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/builtins.c:3487:18: error: use of undeclared identifier 'tree_node'
rounded_size = ( tree_node *)*( &global_trees + 15); 
                 ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/std_expand_builtin_va_arg/src/obj/builtins.o] Error 1
